--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=intimeproject.db"
-  }
+  },
+  "ApiUrl":"https://localhost:7011/"
 }
